I structured de index page

--- a/index.html
+++ b/index.html
@@ -15,9 +15,22 @@
             </ul>
         </nav>
     </header>
-    <h1>Personal Briefcase</h1>
-    <div>
-        <p>Hi, I´m a computer science student, this is the first webpage I have ever created, in this page you can see all the projects I have been realising until today, I'll be updating my projects until I feel they are truly complete, this webpage is proof of it. <b>Enjoy it.</b></p>
-    </div>
+    <article>
+        <section>
+            <h1>
+                Personal Briefcase
+            </h1>
+            <p>
+                Hi, I´m a computer science student, this is the first webpage I have ever created, in this page you can see all the projects I have been realising until today, I'll be updating my projects until I feel they are truly complete, this webpage is proof of it. <b>Enjoy it.</b>
+            </p>
+        </section>
+    </article>
+    <footer>
+        <p>Contact me:</p>
+        <ul>
+            <li><b>Phone number: +57 3192797119</b></li>
+            <li><b>Email: nicopipe2010@gmail.com</b></li>
+        </ul>
+    </footer>
 </body>
 </html>
